--- a/tailwind.css
+++ b/tailwind.css
@@ -142,3 +142,12 @@
 .animate-falling {
   animation: falling 1s cubic-bezier(0.22, 1, 0.36, 1) both;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
